UPD ArrayDeque changed to ArrayList in implementation of  RecentCitiesList. ADD view weather for the city selected from recent cities at navigation menu.